force-app/main/default/objects/Continuation_Form__c/Continuation_Form__c.object-meta.xml
<CustomObject>
    <label>Ongoing Monitoring Form</label>
    <nameField>
        <displayFormat>CF - {0000}</displayFormat>
        <label>Continuation Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ongoing Monitoring Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>