force-app/main/default/objects/Continuation_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Continuation Forms</relationshipLabel>
    <relationshipName>Continuation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>