force-app/main/default/objects/Continuation_Form__c/fields/Additional_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client_Code__c</fullName>
    <label>Additional Client Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>