force-app/main/default/objects/Continuation_Form__c/fields/Additional_Client_Names__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client_Names__c</fullName>
    <label>Additional Client Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>