force-app/main/default/objects/Continuation_Form__c/fields/Anticipate_holding_monies_for_the_clie_T__c.field-meta.xml
<CustomField>
    <fullName>Anticipate_holding_monies_for_the_clie_T__c</fullName>
    <label>Anticipate holding monies for the client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>