force-app/main/default/objects/Continuation_Form__c/fields/Anticipate_holding_monies_for_the_client__c.field-meta.xml
<CustomField>
    <fullName>Anticipate_holding_monies_for_the_client__c</fullName>
    <inlineHelpText>Do we anticipate holding monies for the client?</inlineHelpText>
    <label>Anticipate holding monies for the client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>