force-app/main/default/objects/Continuation_Form__c/fields/Any_concerns_over_the_source_of_funds__c.field-meta.xml
<CustomField>
    <fullName>Any_concerns_over_the_source_of_funds__c</fullName>
    <inlineHelpText>Do we have any concerns over the source of the client’s funds?</inlineHelpText>
    <label>Any concerns over the source of funds?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>