force-app/main/default/objects/Continuation_Form__c/fields/Any_concerns_over_the_source_of_funds_T__c.field-meta.xml
<CustomField>
    <fullName>Any_concerns_over_the_source_of_funds_T__c</fullName>
    <label>Any concerns over the source of funds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>