force-app/main/default/objects/Continuation_Form__c/fields/Business_structure_complex_unusual__c.field-meta.xml
<CustomField>
    <fullName>Business_structure_complex_unusual__c</fullName>
    <inlineHelpText>Is the business structure complex/unusual?</inlineHelpText>
    <label>Business structure complex/unusual?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>