force-app/main/default/objects/Continuation_Form__c/fields/Business_structure_complex_unusual_T__c.field-meta.xml
<CustomField>
    <fullName>Business_structure_complex_unusual_T__c</fullName>
    <label>Business structure complex/unusual?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>