force-app/main/default/objects/Continuation_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Continuation Forms</relationshipLabel>
    <relationshipName>Continuation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>