force-app/main/default/objects/Continuation_Form__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <label>Client Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>