force-app/main/default/objects/Continuation_Form__c/fields/Client_transact_with_business_overseas__c.field-meta.xml
<CustomField>
    <fullName>Client_transact_with_business_overseas__c</fullName>
    <inlineHelpText>Does the client transact with businesses in overseas countries with weak money laundering regimes?</inlineHelpText>
    <label>Client transact with business overseas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>