force-app/main/default/objects/Continuation_Form__c/fields/Client_transact_with_business_overseas_T__c.field-meta.xml
<CustomField>
    <fullName>Client_transact_with_business_overseas_T__c</fullName>
    <label>Client transact with business overseas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>