force-app/main/default/objects/Continuation_Form__c/fields/Conflicting_checking__c.field-meta.xml
<CustomField>
    <fullName>Conflicting_checking__c</fullName>
    <inlineHelpText>Conflict checking shall require determining whether there were any:

changes in the controlling ownership interests over the entity; · 
changes in any controlling interests held by the entity; · 
new listings in the group; · 
any known change in service providers that may impact independence; or · 
changes in classification of the entity as public interest. 

Any such changes will require reconsideration of the firm’s conflict checking procedures.</inlineHelpText>
    <label>Conflicting checking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>