force-app/main/default/objects/Continuation_Form__c/fields/Conflicting_checking_text__c.field-meta.xml
<CustomField>
    <fullName>Conflicting_checking_text__c</fullName>
    <label>Conflicting Checking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>