force-app/main/default/objects/Continuation_Form__c/fields/Consider_changes_that_alter_assessment__c.field-meta.xml
<CustomField>
    <fullName>Consider_changes_that_alter_assessment__c</fullName>
    <inlineHelpText>Consider changes that may alter the original assessment of the acceptability of the client and engagement.</inlineHelpText>
    <label>Consider changes that alter assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>