force-app/main/default/objects/Continuation_Form__c/fields/Consider_changes_that_alter_assessment_T__c.field-meta.xml
<CustomField>
    <fullName>Consider_changes_that_alter_assessment_T__c</fullName>
    <label>Consider changes that alter assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>