force-app/main/default/objects/Continuation_Form__c/fields/Date_of_original_engagement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_original_engagement__c</fullName>
    <label>Date of original engagement</label>
    <type>Date</type>
</CustomField>