force-app/main/default/objects/Continuation_Form__c/fields/Does_the_Engagement_Letter__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Engagement_Letter__c</fullName>
    <label>Does the Engagement Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>