force-app/main/default/objects/Continuation_Form__c/fields/EDD_procedures__c.field-meta.xml
<CustomField>
    <fullName>EDD_procedures__c</fullName>
    <label>If “Yes” the client must be treated as h</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>