force-app/main/default/objects/Continuation_Form__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuation</fullName>
            </value>
            <value>
                <fullName>Business CAF</fullName>
            </value>
            <value>
                <fullName>Individual CAF</fullName>
            </value>
            <value>
                <fullName>CF CAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>