force-app/main/default/objects/Continuation_Form__c/fields/Have_links_with_individuals_or_busines_T__c.field-meta.xml
<CustomField>
    <fullName>Have_links_with_individuals_or_busines_T__c</fullName>
    <label>Have links with individuals or business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>