force-app/main/default/objects/Continuation_Form__c/fields/Have_links_with_individuals_or_business__c.field-meta.xml
<CustomField>
    <fullName>Have_links_with_individuals_or_business__c</fullName>
    <inlineHelpText>Does the client have links with individuals or businesses in overseas countries with weak money laundering regimes?</inlineHelpText>
    <label>Have links with individuals or business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>