force-app/main/default/objects/Continuation_Form__c/fields/Have_we_met_the_client_face_to_face__c.field-meta.xml
<CustomField>
    <fullName>Have_we_met_the_client_face_to_face__c</fullName>
    <inlineHelpText>Have we met the client face to face?</inlineHelpText>
    <label>Have we met the client face to face?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>