force-app/main/default/objects/Continuation_Form__c/fields/Have_we_met_the_client_face_to_face_T__c.field-meta.xml
<CustomField>
    <fullName>Have_we_met_the_client_face_to_face_T__c</fullName>
    <label>Have we met the client face to face?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>