force-app/main/default/objects/Continuation_Form__c/fields/Hold_Assests_or_undertake_overseas__c.field-meta.xml
<CustomField>
    <fullName>Hold_Assests_or_undertake_overseas__c</fullName>
    <inlineHelpText>Does the client hold assets or undertake activities overseas?</inlineHelpText>
    <label>Hold Assests or undertake overseas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>