force-app/main/default/objects/Continuation_Form__c/fields/Hold_Assests_or_undertake_overseas_T__c.field-meta.xml
<CustomField>
    <fullName>Hold_Assests_or_undertake_overseas_T__c</fullName>
    <label>Hold Assests or undertake overseas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>