force-app/main/default/objects/Continuation_Form__c/fields/If_adding_a_new_service__c.field-meta.xml
<CustomField>
    <fullName>If_adding_a_new_service__c</fullName>
    <label>If adding a new service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>