force-app/main/default/objects/Continuation_Form__c/fields/If_adding_a_new_service_T__c.field-meta.xml
<CustomField>
    <fullName>If_adding_a_new_service_T__c</fullName>
    <label>If adding a new service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>