force-app/main/default/objects/Continuation_Form__c/fields/iompick10__c.field-meta.xml
<CustomField>
    <fullName>iompick10__c</fullName>
    <label>Has the client or a member of their fami</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>