force-app/main/default/objects/Continuation_Form__c/fields/iompick122__c.field-meta.xml
<CustomField>
    <fullName>iompick122__c</fullName>
    <description>Has the risk level changed from Normal to High since the previously recorded risk level?</description>
    <label>Has the risk level changed from Normal t</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>