force-app/main/default/objects/Continuation_Form__c/fields/iompick12__c.field-meta.xml
<CustomField>
    <fullName>iompick12__c</fullName>
    <label>Considering the above factors, the Money</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>