force-app/main/default/objects/Continuation_Form__c/fields/Is_control_remote__c.field-meta.xml
<CustomField>
    <fullName>Is_control_remote__c</fullName>
    <label>Is control remote?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>