force-app/main/default/objects/Continuation_Form__c/fields/Is_control_remote_T__c.field-meta.xml
<CustomField>
    <fullName>Is_control_remote_T__c</fullName>
    <label>Is control remote?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>