force-app/main/default/objects/Continuation_Form__c/fields/Is_it_a_cash_business__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_cash_business__c</fullName>
    <label>Is it a cash business?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>