force-app/main/default/objects/Continuation_Form__c/fields/Know_your_client_information_held__c.field-meta.xml
<CustomField>
    <fullName>Know_your_client_information_held__c</fullName>
    <inlineHelpText>Ensure that the “know your client” information held on our files</inlineHelpText>
    <label>Know your client information held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>