force-app/main/default/objects/Continuation_Form__c/fields/Know_your_client_information_held_T__c.field-meta.xml
<CustomField>
    <fullName>Know_your_client_information_held_T__c</fullName>
    <label>Know your client information held</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>