force-app/main/default/objects/Continuation_Form__c/fields/Met_Client_face_to_face__c.field-meta.xml
<CustomField>
    <fullName>Met_Client_face_to_face__c</fullName>
    <description>1</description>
    <label>Met Client face to face</label>
    <length>255</length>
    <type>Text</type>
</CustomField>