force-app/main/default/objects/Continuation_Form__c/fields/Money_Laundering_Risk__c.field-meta.xml
<CustomField>
    <fullName>Money_Laundering_Risk__c</fullName>
    <inlineHelpText>Considering the above factors, the Money Laundering Risk is:</inlineHelpText>
    <label>Money Laundering Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>