force-app/main/default/objects/Continuation_Form__c/fields/Money_Laundering_Risk_T__c.field-meta.xml
<CustomField>
    <fullName>Money_Laundering_Risk_T__c</fullName>
    <label>Money Laundering Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>