force-app/main/default/objects/Continuation_Form__c/fields/Monitoring_Type__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Type__c</fullName>
    <label>Monitoring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Service Line</fullName>
            </value>
            <value>
                <fullName>Ad Hoc Ongoing Monitoring</fullName>
            </value>
            <value>
                <fullName>Annual Ongoing Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>