force-app/main/default/objects/Continuation_Form__c/fields/NB_identityverification__c.field-meta.xml
<CustomField>
    <fullName>NB_identityverification__c</fullName>
    <label>If “Yes” detail the additional verificat</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>