force-app/main/default/objects/Continuation_Form__c/fields/Politically_Exposed_Person__c.field-meta.xml
<CustomField>
    <fullName>Politically_Exposed_Person__c</fullName>
    <inlineHelpText>Has the client or a member of their family or a known close associate become a Politically Exposed Person (PEP)?</inlineHelpText>
    <label>Politically Exposed Person?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>