force-app/main/default/objects/Continuation_Form__c/fields/Politically_Exposed_Person_T__c.field-meta.xml
<CustomField>
    <fullName>Politically_Exposed_Person_T__c</fullName>
    <label>Politically Exposed Person?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>