force-app/main/default/objects/Continuation_Form__c/fields/Prepared_by__c.field-meta.xml
<CustomField>
    <fullName>Prepared_by__c</fullName>
    <label>Prepared by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>