force-app/main/default/objects/Continuation_Form__c/fields/Risk_level_changed_from_Normal_to_High__c.field-meta.xml
<CustomField>
    <fullName>Risk_level_changed_from_Normal_to_High__c</fullName>
    <inlineHelpText>Has the risk level changed from Normal to High since the previously recorded risk level?</inlineHelpText>
    <label>Risk level changed from Normal to High</label>
    <length>255</length>
    <type>Text</type>
</CustomField>