force-app/main/default/objects/Continuation_Form__c/fields/Risk_level_changed_from_Normal_to_High_T__c.field-meta.xml
<CustomField>
    <fullName>Risk_level_changed_from_Normal_to_High_T__c</fullName>
    <label>Risk level changed from Normal to High</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>