force-app/main/default/objects/Continuation_Form__c/fields/Still_be_acting_for_the_client__c.field-meta.xml
<CustomField>
    <fullName>Still_be_acting_for_the_client__c</fullName>
    <inlineHelpText>Considering the answers to the above should we still be acting for the client?</inlineHelpText>
    <label>Still be acting for the client?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>