force-app/main/default/objects/Continuation_Form__c/fields/Still_be_acting_for_the_client_T__c.field-meta.xml
<CustomField>
    <fullName>Still_be_acting_for_the_client_T__c</fullName>
    <label>Still be acting for the client?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>