force-app/main/default/objects/Continuation_Form__c/fields/Supporting_Documents__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documents__c</fullName>
    <label>Supporting Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>