force-app/main/default/objects/Continuation_Form__c/fields/Use_product_services_or_entities__c.field-meta.xml
<CustomField>
    <fullName>Use_product_services_or_entities__c</fullName>
    <inlineHelpText>Does the client use products, services or entities which provide anonymity?</inlineHelpText>
    <label>Use product, services or entities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>