force-app/main/default/objects/Continuation_Form__c/fields/Use_product_services_or_entities_Text__c.field-meta.xml
<CustomField>
    <fullName>Use_product_services_or_entities_Text__c</fullName>
    <label>Use product services or entities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>