force-app/main/default/objects/Continuation_Form__c/fields/Which_DC__c.field-meta.xml
<CustomField>
    <fullName>Which_DC__c</fullName>
    <label>Which DC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>